# yang

./: .gitignore  Makefile  README.md
.github/workflows/: run_tests.yml
connector/: DESCRIPTION.rst  Makefile  asr22.yaml  meson.build  pyproject.toml  requirements.txt  setup.py  test.py  tests
connector/docs/: README.rst  apidocs.rst  conf.py  index.rst
connector/docs/changelog/: index.rst  undistributed.rst
connector/docs/changelog/2016/: july.rst  november.rst
connector/docs/changelog/2017/: april.rst  may.rst
connector/docs/changelog/2018/: november.rst  october.rst
connector/docs/changelog/2019/: jul.rst  june.rst
connector/docs/changelog/2020/: april.rst  august.rst  december.rst  july.rst  june.rst  may.rst  october.rst  september.rst
connector/docs/changelog/2021/: april.rst  august.rst  december.rst  july.rst  june.rst  may.rst  october.rst  september.rst  undistributed.rst
connector/docs/changelog/2022/: april.rst  february.rst  january.rst  july.rst  june.rst  march.rst  may.rst  november.rst  october.rst  september.rst
connector/docs/changelog/2023/: april.rst  august.rst  december.rst  february.rst  january.rst  july.rst  june.rst  may.rst  november.rst  october.rst  september.rst
connector/docs/changelog/2024/: September.rst  april.rst  august.rst  february.rst  january.rst  july.rst  june.rst  march.rst  may.rst  november.rst  october.rst  september.rst
connector/docs/changelog/2025/: april.rst  august.rst  december.rst  february.rst  january.rst  july.rst  june.rst  march.rst  may.rst  october.rst  september.rst
connector/docs/changelog/2026/: april.rst  february.rst  january.rst  march.rst  may.rst
connector/docs/changelog/undistributed/: changelog_GerriorL_add_timeout_to_netconf_20220718.rst  changelog_add_grcp.rst  changelog_fix_UT_20240122091930.rst  changelog_fix_syntax_warning_20241202082730.rst  changelog_gnmi_26102022.rst  changelog_gnmi_use_proxy_server_20231029.rst  changelog_netconf_logging_20221104112608.rst  changelog_protofiles_20250508112514.rst  changelog_remove_depend_2305051228.rst  changelog_sodn_yang_connector_proto_202605251206.rst  changelog_tahigash_gnmi_reconnect_20220413132300.rst  changelog_tahigash_pinning_protobuf_20220630142700.rst  changelog_tahigash_small_refactors.rst  changelog_update_gnmi_06222023.rst  changelog_update_protofiles_06162023.rst  fix_gnmi_reconnect.rst  fix_import_118231509.rst  netconf_sshtunnel_logging.rst  skip_verify_gnmi.rst  template.rst
connector/docs/changelog/undistributed/changelog./: changelog_add_grpc_connection_class_20231002.rst  changelog_omid_sshtunnel_gnmi_202309211630.rst
connector/src/yang/: __init__.py  netconf.py
connector/src/yang/connector/: __init__.py  gnmi.py  grpc.py  jsonbuilder.py  netconf.py  settings.py  xpath_util.py
connector/src/yang/connector/cisco_gnmi/: client.py
connector/src/yang/connector/cisco_gnmi/proto/protofiles/: gnmi.proto
connector/src/yang/connector/grpc/: __init__.py  telegraf.py
connector/src/yang/connector/proto/: __init__.py  gnmi_ext_pb2.py  gnmi_ext_pb2_grpc.py  gnmi_pb2.py  gnmi_pb2_grpc.py
connector/src/yang/connector/proto/protofiles/: gnmi.proto  gnmi_ext.proto
connector/src/yang/connector/tests/: __init__.py  runAll  test_gnmi.py  test_grpc.py  test_yang.py
ncdiff/: .gitignore  .makefile.swp  DESCRIPTION.rst  MANIFEST.in  Makefile  meson.build  pyproject.toml  requirements.txt  setup.py  tests
ncdiff/docs/: README.rst  api_calculator.rst  api_composer.rst  api_config.rst  api_configdelta.rst  api_device.rst  api_gnmi.rst  api_model.rst  api_modelcompiler.rst  api_modeldiff.rst  api_modeldownloader.rst  api_netconf.rst  api_restconf.rst  api_runningdiff.rst  apidocs.rst  conf.py  usage_config.rst  usage_configdelta.rst  usage_gnmi_get.rst  usage_gnmi_set.rst  usage_model.rst  usage_rc_get.rst  usage_rpcreply.rst  usage_running.rst  usage_tutorial.rst
ncdiff/docs/_static/: embed_version.dev.js  embed_version.js
ncdiff/docs/_templates/: layout.html
ncdiff/docs/changelog/: changelog_modify_ConfigDelta_20240828235821.rst  index.rst  undistributed.rst
ncdiff/docs/changelog/2017/: june.rst
ncdiff/docs/changelog/2018/: april.rst  march.rst  november.rst  october.rst
ncdiff/docs/changelog/2021/: February.rst
ncdiff/docs/changelog/2023/: November.rst
ncdiff/docs/changelog/2024/: February.rst  april.rst
ncdiff/docs/changelog/undistributed/: change_log_device_202512051700.rst  change_log_fix_running_config_202509172023.rst  change_log_running_config_added_helper_function_202511072253.rst  changelog_add__rc_gnmi_202518031128.rst  changelog_fix_running_config_diff_202509112017.rst  changelog_fix_syntax_warning_20241202082730.rst  changelog_harish_distribute_list_1300_out_20240618043947.rst  changelog_harish_ip_ospf_message_digest_key_20240613050901.rst  changelog_hyv_fix_mask_encrypted_202512051700.rst  changelog_paneeraj_mpls_mldp_static_202405242052.rst  changelog_paneeraj_router_orderless_202405242059.rst  changelog_sodn_advice_tracking_binding_202405281316.rst  changelog_tahigash_ncdiff_sync_enh_20240208171500.rst  changelog_tahigash_redistribute_20240514092900.rst  changelog_yang_ncdiff_rc_202509031053.rst  np_containers.rst  tahigash_leaf_order_20240312195700.rst  tahigash_orderless_update_20240401170800.rst  tahigash_sync_from_ncdiff_20240319102800.rst
ncdiff/src/yang/: __init__.py
ncdiff/src/yang/ncdiff/: __init__.py  calculator.py  composer.py  config.py  device.py  gnmi.py  model.py  netconf.py  ref.py  restconf.py  runningconfig.py
ncdiff/src/yang/ncdiff/tests/: openconfig-interfaces@2016-12-22.xml  openconfig-network-instance@2017-01-13.xml  runAll  test_ncdiff.py  test_running_config.py
ncdiff/src/yang/ncdiff/tests/yang/: jon.yang
verifiers/: DESCRIPTION.rst  Makefile  meson.build  pyproject.toml  setup.py
verifiers/docs/: README.rst  apidocs.rst  conf.py  index.rst  installation.rst
verifiers/docs/examples/: gnmi.rst  index.rst  netconf.rst
verifiers/src/yang/: __init__.py
verifiers/src/yang/verifiers/: __init__.py  base_verifier.py  count_verifier.py  verifiers.py
(+1 files in other folders)
